<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.ConnectActivity">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/username_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/username_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                />

            <EditText
                android:id="@+id/username_edt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:inputType="text" />
        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/sever_address_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/username_bar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="32dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/server_address"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                />

            <EditText
                android:id="@+id/ip_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/ip_hint"
                android:text="@string/default_ip"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:inputType="text"
                />

            <EditText
                android:id="@+id/port_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/port_hint"
                android:text="@string/default_port"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:inputType="number"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>


        <Button
            android:id="@+id/connect_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/sever_address_bar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="30dp"
            android:text="@string/connect_btn"
            android:onClick="connect"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
